--- a/CourseLister/Base.lproj/Main.storyboard
+++ b/CourseLister/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <!--Courses-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="CourseListViewController" customModule="CourseLister" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="CourseListViewController" customModule="CourseLister" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -46,6 +46,101 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="951" y="370"/>
+        </scene>
+        <!--Add Course View Controller-->
+        <scene sceneID="LyI-Q8-f17">
+            <objects>
+                <viewController storyboardIdentifier="ADD_COURSE" id="31I-Lx-3C3" customClass="AddCourseViewController" customModule="CourseLister" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vEr-wj-qt8"/>
+                        <viewControllerLayoutGuide type="bottom" id="kOp-ak-XOv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QVj-Ig-LwG">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ma-LZ-Tyu">
+                                <rect key="frame" x="16" y="20" width="48" height="30"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="cancelButtonPressed:" destination="31I-Lx-3C3" eventType="touchUpInside" id="LJQ-zq-3Jt"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a new course" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="anb-5p-oqO">
+                                <rect key="frame" x="231" y="30" width="139" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="38o-Ra-H5Z" userLabel="Separator">
+                                <rect key="frame" x="0.0" y="61" width="600" height="2"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="It2-1y-zKb"/>
+                                </constraints>
+                            </view>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter course title" translatesAutoresizingMaskIntoConstraints="NO" id="o9c-Xk-b2j" userLabel="Title Text View">
+                                <rect key="frame" x="60" y="83" width="480" height="62"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter course description" translatesAutoresizingMaskIntoConstraints="NO" id="iGT-yT-lXe" userLabel="Description Text View">
+                                <rect key="frame" x="60" y="165" width="480" height="415"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7k7-P0-yKe">
+                                <rect key="frame" x="542" y="20" width="42" height="33"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <state key="normal" title="Done">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="doneButtonPressed:" destination="31I-Lx-3C3" eventType="touchUpInside" id="c3Q-UZ-oiB"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="o9c-Xk-b2j" firstAttribute="width" secondItem="iGT-yT-lXe" secondAttribute="width" id="1hi-0V-k1f"/>
+                            <constraint firstItem="9ma-LZ-Tyu" firstAttribute="top" secondItem="vEr-wj-qt8" secondAttribute="bottom" id="3Rb-7H-VFm"/>
+                            <constraint firstItem="o9c-Xk-b2j" firstAttribute="height" secondItem="iGT-yT-lXe" secondAttribute="height" multiplier="0.15" id="DC3-6j-5hr"/>
+                            <constraint firstItem="o9c-Xk-b2j" firstAttribute="width" secondItem="QVj-Ig-LwG" secondAttribute="width" multiplier="0.8" id="Euc-xn-x5B"/>
+                            <constraint firstItem="iGT-yT-lXe" firstAttribute="height" secondItem="o9c-Xk-b2j" secondAttribute="height" id="ExR-I7-GUh"/>
+                            <constraint firstItem="iGT-yT-lXe" firstAttribute="top" secondItem="o9c-Xk-b2j" secondAttribute="bottom" constant="20" id="L2C-cb-dtO"/>
+                            <constraint firstAttribute="centerX" secondItem="o9c-Xk-b2j" secondAttribute="centerX" id="O6c-Xd-i18"/>
+                            <constraint firstItem="o9c-Xk-b2j" firstAttribute="top" secondItem="38o-Ra-H5Z" secondAttribute="bottom" constant="20" id="OVb-UN-oD6"/>
+                            <constraint firstAttribute="centerX" secondItem="38o-Ra-H5Z" secondAttribute="centerX" id="TLf-IT-ATJ"/>
+                            <constraint firstItem="kOp-ak-XOv" firstAttribute="top" secondItem="iGT-yT-lXe" secondAttribute="bottom" constant="20" id="ViW-Tf-WAY"/>
+                            <constraint firstItem="9ma-LZ-Tyu" firstAttribute="leading" secondItem="QVj-Ig-LwG" secondAttribute="leadingMargin" id="Z9U-i4-r0W"/>
+                            <constraint firstAttribute="centerX" secondItem="iGT-yT-lXe" secondAttribute="centerX" id="aD9-H5-Bj2"/>
+                            <constraint firstItem="38o-Ra-H5Z" firstAttribute="top" secondItem="anb-5p-oqO" secondAttribute="bottom" constant="10" id="aYy-lX-Cwg"/>
+                            <constraint firstItem="anb-5p-oqO" firstAttribute="height" secondItem="o9c-Xk-b2j" secondAttribute="height" id="alk-eL-jnL"/>
+                            <constraint firstAttribute="centerX" secondItem="anb-5p-oqO" secondAttribute="centerX" id="biN-K7-AeN"/>
+                            <constraint firstAttribute="width" secondItem="38o-Ra-H5Z" secondAttribute="width" id="dcA-8v-qr6"/>
+                            <constraint firstItem="anb-5p-oqO" firstAttribute="top" secondItem="vEr-wj-qt8" secondAttribute="bottom" constant="10" id="doQ-lB-1QN"/>
+                            <constraint firstItem="7k7-P0-yKe" firstAttribute="trailing" secondItem="QVj-Ig-LwG" secondAttribute="trailingMargin" id="msp-rF-OHn"/>
+                            <constraint firstItem="7k7-P0-yKe" firstAttribute="top" secondItem="vEr-wj-qt8" secondAttribute="bottom" id="qC9-a7-obx"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="ExR-I7-GUh"/>
+                                <exclude reference="alk-eL-jnL"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <connections>
+                        <outlet property="descriptionTextView" destination="iGT-yT-lXe" id="dwG-2W-S2U"/>
+                        <outlet property="titleTextView" destination="o9c-Xk-b2j" id="gfU-3y-mPw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zLl-iv-YgA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="945" y="1080"/>
         </scene>
         <!--Course Detail View Controller-->
         <scene sceneID="p7l-9O-LII">
