--- a/CourseLister/Base.lproj/Main.storyboard
+++ b/CourseLister/Base.lproj/Main.storyboard
@@ -71,7 +71,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add a new course" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="anb-5p-oqO">
                                 <rect key="frame" x="231" y="30" width="139" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="38o-Ra-H5Z" userLabel="Separator">
@@ -84,12 +84,14 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter course title" translatesAutoresizingMaskIntoConstraints="NO" id="o9c-Xk-b2j" userLabel="Title Text View">
                                 <rect key="frame" x="60" y="83" width="480" height="62"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Enter course description" translatesAutoresizingMaskIntoConstraints="NO" id="iGT-yT-lXe" userLabel="Description Text View">
                                 <rect key="frame" x="60" y="165" width="480" height="415"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
@@ -145,7 +147,7 @@
         <!--Course Detail View Controller-->
         <scene sceneID="p7l-9O-LII">
             <objects>
-                <viewController storyboardIdentifier="COURSE_DETAIL" id="fVJ-SG-fJA" customClass="CourseDetailViewController" customModule="CourseLister" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="COURSE_DETAIL" automaticallyAdjustsScrollViewInsets="NO" id="fVJ-SG-fJA" customClass="CourseDetailViewController" customModule="CourseLister" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="0Ch-Tg-wj2"/>
                         <viewControllerLayoutGuide type="bottom" id="cKh-Y0-u9G"/>
@@ -154,41 +156,55 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0I7-iM-lVc" userLabel="Title">
-                                <rect key="frame" x="60" y="30" width="480" height="20"/>
-                                <attributedString key="attributedText">
-                                    <fragment content="Label">
-                                        <attributes>
-                                            <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                            <font key="NSFont" size="17" name="HelveticaNeue"/>
-                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
-                                        </attributes>
-                                    </fragment>
-                                </attributedString>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XoX-fL-sF3">
-                                <rect key="frame" x="16" y="60" width="568" height="540"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" text="title" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rZg-nw-OHT" userLabel="Title Text View">
+                                <rect key="frame" x="16" y="20" width="568" height="75"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="CVP-sV-L2q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="description" translatesAutoresizingMaskIntoConstraints="NO" id="NCa-BO-rjp" userLabel="Description Text View">
+                                <rect key="frame" x="16" y="117" width="568" height="475"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cX7-j8-YHa">
+                                <rect key="frame" x="30" y="105" width="540" height="2"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="KmL-jS-ZH1"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="0I7-iM-lVc" firstAttribute="width" secondItem="gEc-UG-jtR" secondAttribute="width" multiplier="0.8" id="10c-hw-91L"/>
-                            <constraint firstItem="cKh-Y0-u9G" firstAttribute="top" secondItem="XoX-fL-sF3" secondAttribute="bottom" id="CUf-b2-npu"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="XoX-fL-sF3" secondAttribute="trailing" id="GDQ-Gz-JWk"/>
-                            <constraint firstAttribute="centerX" secondItem="0I7-iM-lVc" secondAttribute="centerX" id="PhM-ho-KVz"/>
-                            <constraint firstItem="XoX-fL-sF3" firstAttribute="top" secondItem="0I7-iM-lVc" secondAttribute="bottom" constant="10" id="ehW-Az-HOg"/>
-                            <constraint firstItem="XoX-fL-sF3" firstAttribute="leading" secondItem="gEc-UG-jtR" secondAttribute="leadingMargin" id="lBN-x1-2ji"/>
-                            <constraint firstItem="0I7-iM-lVc" firstAttribute="top" secondItem="0Ch-Tg-wj2" secondAttribute="bottom" constant="10" id="z7W-6f-xir"/>
+                            <constraint firstItem="rZg-nw-OHT" firstAttribute="leading" secondItem="gEc-UG-jtR" secondAttribute="leadingMargin" id="0dC-Zj-kiJ"/>
+                            <constraint firstItem="NCa-BO-rjp" firstAttribute="top" secondItem="rZg-nw-OHT" secondAttribute="bottom" constant="10" id="26J-Di-zLz"/>
+                            <constraint firstItem="rZg-nw-OHT" firstAttribute="top" secondItem="0Ch-Tg-wj2" secondAttribute="bottom" id="3sk-x3-gJ0"/>
+                            <constraint firstItem="cX7-j8-YHa" firstAttribute="width" secondItem="gEc-UG-jtR" secondAttribute="width" multiplier="0.9" id="FcL-tz-gFT"/>
+                            <constraint firstItem="NCa-BO-rjp" firstAttribute="trailing" secondItem="gEc-UG-jtR" secondAttribute="trailingMargin" id="hR2-nf-nVt"/>
+                            <constraint firstAttribute="centerX" secondItem="NCa-BO-rjp" secondAttribute="centerX" id="jJj-yp-yjy"/>
+                            <constraint firstAttribute="centerX" secondItem="cX7-j8-YHa" secondAttribute="centerX" id="lfU-wb-a0X"/>
+                            <constraint firstItem="NCa-BO-rjp" firstAttribute="top" secondItem="cX7-j8-YHa" secondAttribute="bottom" constant="10" id="mzq-0f-Dx9"/>
+                            <constraint firstAttribute="centerX" secondItem="rZg-nw-OHT" secondAttribute="centerX" id="o3J-Hy-bpi"/>
+                            <constraint firstItem="NCa-BO-rjp" firstAttribute="leading" secondItem="gEc-UG-jtR" secondAttribute="leadingMargin" id="sD8-Ji-CDF"/>
+                            <constraint firstItem="cX7-j8-YHa" firstAttribute="top" secondItem="rZg-nw-OHT" secondAttribute="bottom" constant="10" id="tle-dn-hfh"/>
+                            <constraint firstItem="cKh-Y0-u9G" firstAttribute="top" secondItem="NCa-BO-rjp" secondAttribute="bottom" constant="8" id="vkf-NA-OWx"/>
+                            <constraint firstItem="rZg-nw-OHT" firstAttribute="trailing" secondItem="gEc-UG-jtR" secondAttribute="trailingMargin" id="w5P-gK-9T7"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="26J-Di-zLz"/>
+                            </mask>
+                        </variation>
                     </view>
                     <connections>
-                        <outlet property="descriptionTextView" destination="XoX-fL-sF3" id="gpE-Ia-4uf"/>
-                        <outlet property="titleLabel" destination="0I7-iM-lVc" id="Jly-fa-GRZ"/>
+                        <outlet property="descriptionTextView" destination="NCa-BO-rjp" id="1lz-kG-md7"/>
+                        <outlet property="titleHeightConstraint" destination="CVP-sV-L2q" id="jSW-fU-uCq"/>
+                        <outlet property="titleTextView" destination="rZg-nw-OHT" id="yV4-PG-6Lw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MaG-H8-m90" userLabel="First Responder" sceneMemberID="firstResponder"/>
